infra/k8s/istio/backend-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: halan-backend
  namespace: halan
spec:
  hosts:
    - halan-backend
  http:
    - timeout: 3s
      route:
        - destination:
            host: halan-backend
            port:
              number: 5000
